--- a/styles.css
+++ b/styles.css
@@ -62,4 +62,54 @@ nav li {
     font-size:2em;
 }
 
+#presentation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+}
+
+#presentation p{
+    text-align:center;
+    max-width: 700px;
+}
+
+#presentation-activities {
+    display:flex;
+    justify-content: space-around;
+    max-width:800px;
+    
+}
+
+#presentation-activities article{
+    text-align: center;
+    padding:16px;
+}
+
+#presentation-activities article h2 {
+    font-weight: 400;
+}
+
+blockquote {
+    max-width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+blockquote p {
+    text-align: justify;
+}
+
+cite {
+    font-weight: 200;
+    font-style: normal;
+    opacity:0.7 ;
+}
+
+
+
+
+
+
 
