--- a/styles.css
+++ b/styles.css
@@ -107,6 +107,46 @@ cite {
     opacity:0.7 ;
 }
 
+footer {
+    background-color: #5B359D;
+    color:white;
+    padding-top:40px;
+    padding-bottom:40px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    width:100%;
+}
+
+footer p {
+    font-size: 0.8em;
+}
+
+#informations {
+    width:100%;
+    display :flex;
+    justify-content: space-around;
+    align-items: space-around;
+}
+
+#informations h3 {
+    opacity:0.7;
+    font-size: 0.9em;
+    font-weight: 400;
+}
+
+#informations li{
+    font-size: 0.8em;
+}
+
+#informations ul {
+    margin-top:0%;
+}
+
+.coordonnée {
+    list-style: none;
+}
+
 
 
 
